--- a/style.css
+++ b/style.css
@@ -466,6 +466,19 @@ body {
   font-weight: 500;
   font-size: 0.95rem;
 }
+.project-detail h2 {
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+
+.project-title {
+  font-size: 2rem;
+  margin-bottom: 8px;
+}
+
+.project-desc {
+  max-width: 820px;
+}
 
 
 /* CONTACT */
@@ -751,6 +764,7 @@ body {
   background-color: #1d4ed8;
   border-color: #1d4ed8;
 }
+
 
 
 
